// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VoucherEditForm should render correct voucher form structure 1`] = `
<DocumentFragment>
  <div>
    <div
      class="paneset"
      data-test-edit-voucher-form="true"
    >
      <section
        class="pane focusIndicator"
        id="pane-edit-voucher"
      >
        <div
          aria-labelledby="paneHeaderpane-edit-voucher-pane-title"
          class="paneHeader"
          data-test-pane-header="true"
          id="paneHeaderpane-edit-voucher"
          role="region"
          tabindex="-1"
        >
          <div
            class="paneHeaderButtonsArea first"
          >
            <div
              class="paneMenu"
            >
              <button
                aria-label="stripes-components.closeItem"
                class="iconButton medium paneHeaderCloseIcon PaneHeaderIconButton paneHeaderIconButton"
                data-test-pane-header-dismiss-button="true"
                icon="times"
                type="button"
              >
                <span
                  class="iconButtonInner mediumOffset PaneHeaderIconButton__inner"
                  data-test-pane-header-dismiss-button="true"
                >
                  <span>
                    Icon
                  </span>
                </span>
              </button>
            </div>
          </div>
          <div
            class="paneHeaderCenter"
          >
            <div
              class="paneHeaderCenterInner"
              id="paneHeaderpane-edit-voucher-pane-title"
            >
              <h2
                class="paneTitle"
                data-test-pane-header-title="true"
              >
                <div
                  class="appIcon small icon-alignment-center"
                >
                  <span
                    aria-hidden="true"
                    class="icon"
                  />
                </div>
                <span
                  class="paneTitleLabel"
                >
                  ui-invoice.voucher.paneTitle
                </span>
              </h2>
              <p
                class="paneSub"
                data-test-pane-header-sub="true"
                id="paneHeaderpane-edit-voucher-subtitle"
              >
                <span>
                  ui-invoice.voucher.paneSubTitle
                </span>
              </p>
            </div>
          </div>
        </div>
        <div
          class="paneContent hasPadding"
          id="pane-edit-voucher-content"
          tabindex="-1"
        >
          <div
            class="row"
          >
            <div
              class="col-xs-3"
            >
              <div
                class="kvRoot"
              >
                <div
                  class="kvLabel"
                >
                  ui-invoice.invoice.details.voucher.voucherNumber
                </div>
                <div
                  class="kvValue"
                  data-test-kv-value="true"
                >
                  1023
                </div>
              </div>
            </div>
            <div
              class="col-xs-3"
            >
              <div
                class="textField"
              >
                <label
                  class="label"
                  for="disbursementNumber"
                >
                  ui-invoice.invoice.details.voucher.disbursementNumber
                </label>
                <div
                  class="formControl inputGroup"
                >
                  <input
                    aria-invalid="false"
                    autocapitalize="off"
                    autocomplete="off"
                    autocorrect="off"
                    error=""
                    id="disbursementNumber"
                    name="disbursementNumber"
                    spellcheck="false"
                    type="text"
                    value="EFT546789"
                    warning=""
                  />
                </div>
                <div
                  role="alert"
                />
              </div>
            </div>
            <div
              class="col-xs-3"
            >
              <div
                class="container"
              >
                <div
                  class="container"
                  data-test-datepicker-container="true"
                >
                  <div
                    class="textField"
                  >
                    <label
                      class="label"
                      for="dp-2"
                    >
                      ui-invoice.invoice.details.voucher.disbursementDate
                    </label>
                    <div
                      class="formControl inputGroup"
                    >
                      <input
                        aria-invalid="false"
                        autocapitalize="off"
                        autocomplete="off"
                        autocorrect="off"
                        id="dp-2"
                        name="disbursementDate"
                        placeholder="MM/DD/YYYY"
                        spellcheck="false"
                        type="text"
                        value="12/06/2019"
                      />
                      <div
                        class="endControls"
                      >
                        <div
                          class="controlGroup"
                        >
                          <button
                            aria-label="stripes-components.clearFieldValue"
                            class="iconButton medium"
                            data-test-clear="true"
                            icon="times-circle-solid"
                            id="datepicker-clear-button-dp-2"
                            tabindex="-1"
                            type="button"
                          >
                            <span
                              class="iconButtonInner mediumOffset"
                              data-test-clear="true"
                            >
                              <span>
                                Icon
                              </span>
                            </span>
                          </button>
                          <button
                            aria-haspopup="true"
                            aria-label="stripes-components.showOrHideDatepicker"
                            class="iconButton medium"
                            data-test-calendar-button="true"
                            icon="calendar"
                            id="datepicker-toggle-calendar-button-dp-2"
                            type="button"
                          >
                            <span
                              class="iconButtonInner mediumOffset"
                              data-test-calendar-button="true"
                            >
                              <span>
                                Icon
                              </span>
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                    <div
                      role="alert"
                    />
                  </div>
                  <input
                    data-test-datepicker-hidden-input="true"
                    hidden=""
                    type="text"
                    value="2019-12-06"
                  />
                </div>
              </div>
            </div>
            <div
              class="col-xs-3"
            >
              <div
                class="textField"
              >
                <label
                  class="label"
                  for="disbursementAmount"
                >
                  ui-invoice.invoice.details.voucher.disbursementAmount
                </label>
                <div
                  class="formControl inputGroup"
                >
                  <input
                    aria-invalid="false"
                    autocapitalize="off"
                    autocomplete="off"
                    autocorrect="off"
                    error=""
                    id="disbursementAmount"
                    name="disbursementAmount"
                    spellcheck="false"
                    type="text"
                    value="23.45"
                    warning=""
                  />
                </div>
                <div
                  role="alert"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="paneFooter"
        >
          <div
            class="paneFooterContent"
          >
            <span
              class="renderStart"
              data-test-pane-footer-start="true"
            >
              <button
                class="button default mega"
                data-test-cancel-button="true"
                type="button"
              >
                <span
                  class="inner"
                >
                  stripes-acq-components.FormFooter.cancel
                </span>
              </button>
            </span>
            <span
              data-test-pane-footer-end="true"
            >
              <button
                class="button primary mega"
                data-test-save-button="true"
                disabled=""
                id="save-voucher-button"
                type="submit"
              >
                <span
                  class="inner"
                >
                  stripes-components.saveAndClose
                </span>
              </button>
            </span>
          </div>
        </div>
      </section>
    </div>
    <div
      class="container"
    >
      <div
        class="cursorHover"
        hidden=""
        style="left: -10px;"
      >
        <div
          class="cursor"
        >
           
        </div>
      </div>
    </div>
  </div>
  <div />
</DocumentFragment>
`;

exports[`VoucherEditForm should render correct voucher form structure with editable voucher number 1`] = `
<DocumentFragment>
  <div>
    <div
      class="paneset"
      data-test-edit-voucher-form="true"
    >
      <section
        class="pane focusIndicator"
        id="pane-edit-voucher"
      >
        <div
          aria-labelledby="paneHeaderpane-edit-voucher-pane-title"
          class="paneHeader"
          data-test-pane-header="true"
          id="paneHeaderpane-edit-voucher"
          role="region"
          tabindex="-1"
        >
          <div
            class="paneHeaderButtonsArea first"
          >
            <div
              class="paneMenu"
            >
              <button
                aria-label="stripes-components.closeItem"
                class="iconButton medium paneHeaderCloseIcon PaneHeaderIconButton paneHeaderIconButton"
                data-test-pane-header-dismiss-button="true"
                icon="times"
                type="button"
              >
                <span
                  class="iconButtonInner mediumOffset PaneHeaderIconButton__inner"
                  data-test-pane-header-dismiss-button="true"
                >
                  <span>
                    Icon
                  </span>
                </span>
              </button>
            </div>
          </div>
          <div
            class="paneHeaderCenter"
          >
            <div
              class="paneHeaderCenterInner"
              id="paneHeaderpane-edit-voucher-pane-title"
            >
              <h2
                class="paneTitle"
                data-test-pane-header-title="true"
              >
                <div
                  class="appIcon small icon-alignment-center"
                >
                  <span
                    aria-hidden="true"
                    class="icon"
                  />
                </div>
                <span
                  class="paneTitleLabel"
                >
                  ui-invoice.voucher.paneTitle
                </span>
              </h2>
              <p
                class="paneSub"
                data-test-pane-header-sub="true"
                id="paneHeaderpane-edit-voucher-subtitle"
              >
                <span>
                  ui-invoice.voucher.paneSubTitle
                </span>
              </p>
            </div>
          </div>
        </div>
        <div
          class="paneContent hasPadding"
          id="pane-edit-voucher-content"
          tabindex="-1"
        >
          <div
            class="row"
          >
            <div
              class="col-xs-3"
            >
              <div
                class="textField"
              >
                <label
                  class="label"
                  for="voucherNumber"
                >
                  ui-invoice.invoice.details.voucher.voucherNumber
                </label>
                <div
                  class="formControl inputGroup"
                >
                  <input
                    aria-invalid="false"
                    autocapitalize="off"
                    autocomplete="off"
                    autocorrect="off"
                    error=""
                    id="voucherNumber"
                    name="voucherNumber"
                    spellcheck="false"
                    type="text"
                    value="1023"
                    warning=""
                  />
                </div>
                <div
                  role="alert"
                />
              </div>
            </div>
            <div
              class="col-xs-3"
            >
              <div
                class="textField"
              >
                <label
                  class="label"
                  for="disbursementNumber"
                >
                  ui-invoice.invoice.details.voucher.disbursementNumber
                </label>
                <div
                  class="formControl inputGroup"
                >
                  <input
                    aria-invalid="false"
                    autocapitalize="off"
                    autocomplete="off"
                    autocorrect="off"
                    error=""
                    id="disbursementNumber"
                    name="disbursementNumber"
                    spellcheck="false"
                    type="text"
                    value="EFT546789"
                    warning=""
                  />
                </div>
                <div
                  role="alert"
                />
              </div>
            </div>
            <div
              class="col-xs-3"
            >
              <div
                class="container"
              >
                <div
                  class="container"
                  data-test-datepicker-container="true"
                >
                  <div
                    class="textField"
                  >
                    <label
                      class="label"
                      for="dp-5"
                    >
                      ui-invoice.invoice.details.voucher.disbursementDate
                    </label>
                    <div
                      class="formControl inputGroup"
                    >
                      <input
                        aria-invalid="false"
                        autocapitalize="off"
                        autocomplete="off"
                        autocorrect="off"
                        id="dp-5"
                        name="disbursementDate"
                        placeholder="MM/DD/YYYY"
                        spellcheck="false"
                        type="text"
                        value="12/06/2019"
                      />
                      <div
                        class="endControls"
                      >
                        <div
                          class="controlGroup"
                        >
                          <button
                            aria-label="stripes-components.clearFieldValue"
                            class="iconButton medium"
                            data-test-clear="true"
                            icon="times-circle-solid"
                            id="datepicker-clear-button-dp-5"
                            tabindex="-1"
                            type="button"
                          >
                            <span
                              class="iconButtonInner mediumOffset"
                              data-test-clear="true"
                            >
                              <span>
                                Icon
                              </span>
                            </span>
                          </button>
                          <button
                            aria-haspopup="true"
                            aria-label="stripes-components.showOrHideDatepicker"
                            class="iconButton medium"
                            data-test-calendar-button="true"
                            icon="calendar"
                            id="datepicker-toggle-calendar-button-dp-5"
                            type="button"
                          >
                            <span
                              class="iconButtonInner mediumOffset"
                              data-test-calendar-button="true"
                            >
                              <span>
                                Icon
                              </span>
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                    <div
                      role="alert"
                    />
                  </div>
                  <input
                    data-test-datepicker-hidden-input="true"
                    hidden=""
                    type="text"
                    value="2019-12-06"
                  />
                </div>
              </div>
            </div>
            <div
              class="col-xs-3"
            >
              <div
                class="textField"
              >
                <label
                  class="label"
                  for="disbursementAmount"
                >
                  ui-invoice.invoice.details.voucher.disbursementAmount
                </label>
                <div
                  class="formControl inputGroup"
                >
                  <input
                    aria-invalid="false"
                    autocapitalize="off"
                    autocomplete="off"
                    autocorrect="off"
                    error=""
                    id="disbursementAmount"
                    name="disbursementAmount"
                    spellcheck="false"
                    type="text"
                    value="23.45"
                    warning=""
                  />
                </div>
                <div
                  role="alert"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="paneFooter"
        >
          <div
            class="paneFooterContent"
          >
            <span
              class="renderStart"
              data-test-pane-footer-start="true"
            >
              <button
                class="button default mega"
                data-test-cancel-button="true"
                type="button"
              >
                <span
                  class="inner"
                >
                  stripes-acq-components.FormFooter.cancel
                </span>
              </button>
            </span>
            <span
              data-test-pane-footer-end="true"
            >
              <button
                class="button primary mega"
                data-test-save-button="true"
                disabled=""
                id="save-voucher-button"
                type="submit"
              >
                <span
                  class="inner"
                >
                  stripes-components.saveAndClose
                </span>
              </button>
            </span>
          </div>
        </div>
      </section>
    </div>
    <div
      class="container"
    >
      <div
        class="cursorHover"
        hidden=""
        style="left: -10px;"
      >
        <div
          class="cursor"
        >
           
        </div>
      </div>
    </div>
  </div>
  <div />
</DocumentFragment>
`;
